# CS267-Final-Project

./: CMakeLists-cuda.txt  CMakeLists-openmp.txt  CMakeLists.txt  README.md  common.h  cuda.cu  main.cpp  openmp-old.cpp  openmp-save.cpp  openmp.cpp  original-cuda.cu  pymgrit-demo-2.py  pymgrit-demo.py  serial-binning.cpp  serial-original.cpp  serial.cpp
